# pickpath-bench

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
__pycache__/: inference.cpython-314.pyc.1812802696592
env/: env.py  graders.py  models.py  tasks.py
env/__pycache__/: env.cpython-314.pyc.2031519684336  graders.cpython-314.pyc.2769759973008  graders.cpython-314.pyc.3046418744800  tasks.cpython-314.pyc.2031535644816  tasks.cpython-314.pyc.2799349211280
server/: app.py
server/__pycache__/: app.cpython-314.pyc.1907790921408
