[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "warehouse-bot-env"
version = "0.1.0"
description = "Deterministic warehouse picking optimisation environment for evaluating route-efficiency policies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.7,<3.0",
    "numpy>=1.26,<3.0",
    "openai>=1.30,<2.0",
    "flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
warehouse-bot = "inference:main"
server        = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]